--- a/src/app/start-list/start-list-add-dialog/start-list-add-dialog.component.tns.html
+++ b/src/app/start-list/start-list-add-dialog/start-list-add-dialog.component.tns.html
@@ -2,7 +2,7 @@
     <GridLayout columns="*" rows="auto,auto">
 
         <StackLayout row="0">
-            <Label [text]="'Split athlets'|L" class="h2 text-center p-t-12 p-b-12"></Label>
+            <Label [text]="'Split athletes'|L" class="h2 text-center p-t-12 p-b-12"></Label>
             <TextField (textChange)="onSizeChange($event)"
                        [hint]="'Group size'|L"
                        autocorrect="false"
