--- a/src/app/start-list/start-list.component.tns.html
+++ b/src/app/start-list/start-list.component.tns.html
@@ -3,5 +3,4 @@
                       (tap)="onDrawerButtonTap()"></NavigationButton>
 </ActionBar>
 
-<router-outlet></router-outlet>
-
+<router-outlet name="startList"></router-outlet>
