--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -49,14 +49,14 @@
 .loading {
   width: 100%;
   height: 100%;
-  background-color: transparentize(gray, 0.5);
+  background-color: transparentize($grey, 0.5);
   z-index: 1;
 }
 
 .sidedrawer-header {
   padding: 10;
   border-bottom-width: 1px;
-  border-bottom-color: gray;
+  border-bottom-color: $grey;
 
   .logo {
     margin-right: 10;
@@ -79,6 +79,9 @@
 
   &.active {
     background-color: $focus
+  }
+  &.disabled {
+    color: $grey
   }
 }
 
@@ -232,7 +235,7 @@ TabStripItem {
 RadListView {
   .checking {
     font-size: 18px;
-    color: gray;
+    color: $grey;
   }
 
   .active {
