--- a/src/app/web/routes/dashboard/dashboard.component.html
+++ b/src/app/web/routes/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
             <mat-card-content>
                 <mat-list>
                     <h3 mat-subheader>
-                        <a [routerLink]="['/edit/'+competition.id]">{{ competition.title }}</a>
+                        <a [routerLink]="['/cabinet', 'edit', competition.id]">{{ competition.title }}</a>
                     </h3>
                     <mat-list-item>
                         <mat-icon mat-list-icon>class</mat-icon>
