--- a/src/app/web/routes/public/app-athlet-register/success-dialog.component.html
+++ b/src/app/web/routes/public/app-athlet-register/success-dialog.component.html
@@ -7,6 +7,6 @@
 <div mat-dialog-actions>
     <button mat-button mat-flat-button
             color="primary"
-            [routerLink]="['public','competition', data.competition.id]">Список атлетов</button>
+            [routerLink]="['/public','competition', data.competition.id]">Список атлетов</button>
     <button mat-button mat-flat-button cdkFocusInitial (click)="closeDialog()" class="bg-white">Закрыть</button>
 </div>
