--- a/src/app/web/routes/results/results-admin/result-detail/result-set-time/result-set-time.component.html
+++ b/src/app/web/routes/results/results-admin/result-detail/result-set-time/result-set-time.component.html
@@ -2,9 +2,9 @@
 <form [formGroup]="setTimeForm"
       (ngSubmit)="onEnter(setTimeForm.valid)">
     <div mat-dialog-content>
-        <p>Please, enter time</p>
+        <p>Введите время отметки</p>
         <mat-form-field>
-            <input matInput [(ngModel)]="time" formControlName="time" required>
+            <input matInput formControlName="time" required>
         </mat-form-field>
     </div>
     <div mat-dialog-actions>
