--- a/src/app/web/shared/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/web/shared/components/breadcrumb/breadcrumb.component.html
@@ -2,7 +2,7 @@
   <ol class="matero-breadcrumb">
     <li class="matero-breadcrumb-item"
         *ngFor="let item of routeNames; first as isFirst; last as isLast">
-      <a href="#" class="link" *ngIf="isFirst">{{item}}</a>
+      <a [routerLink]="['/cabinet']" class="link" *ngIf="isFirst">{{item}}</a>
       <ng-container *ngIf="!isFirst">
         <mat-icon class="chevron">chevron_right</mat-icon>
         <span class="link">{{item}}</span>
