--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,36 @@ a.disabled {
 .hidden {
   display: none !important;
 }
+
+.index-splash {
+  background-image: url(assets/images/splash0.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.index-container {
+  color:white;
+  padding: 10px;
+  background-color: rgba(0,0,0,.5);
+  border-radius: 5px;
+  h1 {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    font-size: 4em;
+    text-align: center;
+  }
+  h2, h3 {
+    text-align: center;
+    font-weight: normal;
+  }
+  p {
+    margin: 5px;
+    text-align: center;
+  }
+}
