--- a/src/app/web/routes/public/public-competition/public-competition.component.html
+++ b/src/app/web/routes/public/public-competition/public-competition.component.html
@@ -1,7 +1,7 @@
 <div class="public-container p-32">
     <form [formGroup]="filterAthlets">
         <mat-card class="m-20">
-            <h1 class="text-center">{{getTitle()}}</h1>
+            <h1 class="text-center">{{ getTitle() }}</h1>
             <mat-card-content fxLayout="row wrap">
                 <mat-form-field fxFlex="100" class="p-16">
                     <input matInput formControlName="search" placeholder="Фильтр">
@@ -24,25 +24,5 @@
         </mat-card>
     </form>
 
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-        <ng-container matColumnDef="number">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Номер</th>
-            <td mat-cell *matCellDef="let element"><b>{{element.number}}</b></td>
-        </ng-container>
-
-        <ng-container matColumnDef="fio">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Имя</th>
-            <td mat-cell *matCellDef="let element">
-                {{element.fio}}
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="class">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Класс</th>
-            <td mat-cell *matCellDef="let element">{{element.class}}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+    <router-outlet (activate)="onActivate($event)"></router-outlet>
 </div>
