--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -37,7 +37,7 @@
                 <GridLayout *ngIf="_competition.selected_competition"
                             [class.active]="_activatedUrl.indexOf('/start-list') == 0"
                             [class.disabled]="!_competition.selected_competition.group_start"
-                            (tap)="_competition.selected_competition.group_start ? navigateTo('/start-list', {clearHistory: true, animated: false}): null"
+                            (tap)="_competition.selected_competition.group_start ? navigateTo('/start-list', {animated: false}): null"
                             columns="auto, *"
                             class="side-label">
                     <Label col="0" text="&#xf0ae;" class="fas"></Label>
